<resources>
    <string name="app_name">eventHandling</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="welcome">Seja Bem vindo</string>
    <string name="spinner">Spinner</string>
    <string name="action_bar_button1">Botão funcionando!!</string>
    <string name="title_button1">Button 1</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="sent">Enviar</string>
    <string name="email_value">Digite seu e-mail</string>
    <string name="observation">Observarções:</string>
    <string name="observation_title">Observação</string>
    <string name="frame_layout_title">Frame layout</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="fragments_title">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>